# argus

./: .env.example  .gitignore  README.md  SECURITY.md  pyproject.toml
app/: __init__.py  cli.py
app/agent/: agent_loop.py  planner.py  prompts.py
app/browser/: browser_executor.py
app/builder/: builder.py  code_provider.py  evaluator.py  sandbox.py  spec.py
app/capabilities/: artifacts.py  audit.py  generated_executor.py  lifecycle.py  memory.py  models.py  registry.py  resolver.py
app/config/: settings.py
app/credentials/: credential_provider.py  env_provider.py  keyring_provider.py
app/executors/: __init__.py  browser_executor.py
app/models/: action_schema.py  audit.py  observation.py  planner_models.py
app/planner/: __init__.py  agent_runtime.py  planner.py  prompts.py
app/safety/: safety_policy.py
app/skills/: __init__.py  amazon.py  amazon_selectors.py  base.py  common.py  registry.py
app/tasks/: amazon_order_status.py
tests/: test_agent_loop.py  test_capability_builder.py  test_capability_lifecycle.py  test_capability_memory.py  test_capability_registry.py  test_capability_resolver.py  test_credentials.py  test_e2e_capability_flow.py  test_evaluator.py  test_generated_capability_runtime_scenarios.py  test_generated_capability_safety.py  test_planner_capability_integration.py  test_planner_output.py  test_safety_policy.py  test_sandbox.py  test_settings.py  test_skills.py
