[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "argus"
version = "0.1.0"
description = "Argus: AI-powered internet operator agent"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Argus Maintainers" }]
dependencies = [
  "openai>=1.40.0",
  "playwright>=1.46.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "python-dotenv>=1.0.1",
  "typer>=0.12.3",
  "keyring>=25.2.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.2",
  "pytest-mock>=3.14.0",
  "ruff>=0.5.5",
]

[project.scripts]
argus = "app.cli:app"

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
